		change is backward-compatible -- if you want to use the old way it should
		work without any issues.
	Modified all standard demo applications and tutorials to use createController(), and
		modified Console and SimApplet to call createController() instead.
	Added Utilities.iFloor, iCeil, and iRound.  Faster than Math.floor, ceil, and round,
		but I don't trust them yet so we don't use them in any core code.  Cave Emptor.
	All generated threads set names for themselves now so you can see them in jvisualvm
	Added SimpleController, which for some reason I cannot fathom was not in the previous
		distro.
	Added FacetedPortrayal
	Console.doQuit is now static, and Controllers of all types are allowed in the
		allConsoles object, now public, and now renamed allControllers
	SimpleController properly registers itself with Console in the allControllers list
		and quits when doClose is called
	Schedule now checks for incorrect intervals in scheduleRepeating
	Added Schedule.clear()
	Addition to DrawInfo2D which now includes the location of the object, in case
		SimplePortrayal2Ds need this information in order to draw the object in
		context properly.  The particular class used to describe the location differs
		from FieldPortrayal to FieldPortrayal: in NetworkPortrayal2D it's the Edge,
		in ContinuousPortrayal2D it's a Double2D, in SparsePortrayal2D and
		HexaSparsePortrayal2D it's an Int2D, and all other relevant Field Portrayals
		use a MutableInt2D.
	Added warning in the movie maker about JMF's writing bad format string info out.
	Added manhattan distance to [Mutable]Double[2|3]D
	setToMinus, negate, and zero in MutableDouble[2|3]D now all return this
	Added various methods to Double2D, some borrowed from MutableDouble2D, others
		borrowed from physics.util.Double2D
	Added the ability for Display3D to select only one element or to select ALL of them,
		and similarly for inspection.
	Added Network.nodeExists(...)
	Added new demo, Celegans